RESOLVED FIXED36494
Fix compilation on Itanium in 32-bit mode
https://bugs.webkit.org/show_bug.cgi?id=36494
Summary Fix compilation on Itanium in 32-bit mode
Kent Hansen
Reported 2010-03-23 08:24:37 PDT
JavaScriptCore/wtf/Platform.h doesn't take into account that IA64 can run in 32-bit mode; WTF_USE_JSVALUE64 will be defined regardless. This causes compilation to fail.
Attachments
Proposed patch (1.28 KB, patch)
2010-03-23 08:33 PDT, Kent Hansen
no flags
Kent Hansen
Comment 1 2010-03-23 08:33:27 PDT
Created attachment 51428 [details] Proposed patch
WebKit Commit Bot
Comment 2 2010-03-23 11:31:02 PDT
Comment on attachment 51428 [details] Proposed patch Clearing flags on attachment: 51428 Committed r56403: <http://trac.webkit.org/changeset/56403>
WebKit Commit Bot
Comment 3 2010-03-23 11:31:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.