2010-03-23  Kent Hansen  <kent.hansen@nokia.com>

Reviewed by Darin Adler.

        Fix compilation on Itanium in 32-bit mode
        https://bugs.webkit.org/show_bug.cgi?id=36494

        * wtf/Platform.h: Introduce CPU(IA64_32). Don't define
          WTF_USE_JSVALUE64 if the CPU is in 32-bit mode.

Canonical link: https://commits.webkit.org/47697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56403 268f45cc-cd09-0410-ab3c-d52691b4dbfc